--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,20 @@
         "LaravelSwagger\\": "src/"
       }
     },
+    "autoload-dev": {
+      "psr-4": {
+        "LaravelSwaggerTest\\": "tests/"
+      }
+    },
     "minimum-stability": "stable",
     "require": {
       "php": ">=7.4",
         "illuminate/contracts": "^7.0|^8.0",
         "illuminate/support": "^7.0|^8.0",
+        "illuminate/http": "^7.0|^8.0",
         "illuminate/console": "^7.0|^8.0",
-        "illuminate/routing": "^7.0|^8.0"
+        "illuminate/routing": "^7.0|^8.0",
+        "fzaninotto/faker": "^1.9"
     },
     "extra": {
       "laravel": {
@@ -28,5 +35,10 @@
           "LaravelSwagger\\LaravelSwaggerProvider"
         ]
       }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.4",
+        "orchestra/testbench": "^6.11"
     }
 }
