--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^6.11"
+        "orchestra/testbench": "^6.11",
+        "hamcrest/hamcrest-php": "^2.0"
     }
 }
