--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "illuminate/http": "^7.0|^8.0",
         "illuminate/console": "^7.0|^8.0",
         "illuminate/routing": "^7.0|^8.0",
-        "fzaninotto/faker": "^1.9"
+        "fzaninotto/faker": "^1.9",
+        "symfony/yaml": "^5.2"
     },
     "extra": {
       "laravel": {
