Route::apiDoc($route, '/path/to/api-doc.yml')

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "illuminate/console": "^7.0|^8.0",
         "illuminate/routing": "^7.0|^8.0",
         "fzaninotto/faker": "^1.9",
-        "symfony/yaml": "^5.2"
+        "symfony/yaml": "^5.2",
+      "ext-json": "*"
     },
     "extra": {
       "laravel": {
