--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
     "minimum-stability": "stable",
     "require": {
       "php": ">=7.4",
-        "illuminate/contracts": "^7.0|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/http": "^7.0|^8.0",
-        "illuminate/console": "^7.0|^8.0",
-        "illuminate/routing": "^7.0|^8.0",
+        "illuminate/contracts": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "illuminate/http": "^7.0|^8.0|^9.0",
+        "illuminate/console": "^7.0|^8.0|^9.0",
+        "illuminate/routing": "^7.0|^8.0|^9.0",
         "symfony/yaml": "^5.2",
-      "ext-json": "*"
+        "ext-json": "*"
     },
     "extra": {
       "laravel": {
